--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,6 +7,9 @@
     margin: 8% 0;
 }
 .nomPlato{
+    font-size: 25px;
+    font-weight: bold;
+    text-decoration: underline;
     text-align: left;
 }
 .descPlato{
